side-spacing-fixed

--- a/src/output.css
+++ b/src/output.css
@@ -1345,6 +1345,11 @@
       background-color: var(--color-white);
     }
   }
+  .lg\:p-6 {
+    @media (width >= 62rem) {
+      padding: calc(var(--spacing) * 6);
+    }
+  }
   .lg\:px-6 {
     @media (width >= 62rem) {
       padding-inline: calc(var(--spacing) * 6);
